# risk-registry-app

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20251021_initial_schema.py
frontend/: package-lock.json  package.json  tailwind.config.js
